assn02/cool.output
Terminals unused in grammar

   ERROR


State 10 conflicts: 2 shift/reduce
State 16 conflicts: 2 shift/reduce
State 68 conflicts: 1 reduce/reduce


Grammar

    0 $accept: program $end

    1 program: class_list

    2 class_list: class
    3           | class_list class

    4 class: CLASS TYPEID '{' feature_list '}' ';'
    5      | CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';'
    6      | error

    7 feature_list: /* empty */
    8             | feature_single ';'
    9             | feature_list feature_single ';'

   10 feature_single: OBJECTID '(' formal_list ')' ':' TYPEID '{' expression_single '}'
   11               | OBJECTID ':' TYPEID
   12               | OBJECTID ':' TYPEID ASSIGN expression_single
   13               | error

   14 formal_list: /* empty */
   15            | formal_list2

   16 formal_list2: formal_single
   17             | formal_list2 ',' formal_single

   18 formal_single: OBJECTID ':' TYPEID
   19              | error

   20 expression_list: expression_single
   21                | expression_list ';' expression_single
   22                | error

   23 expr_comma_list: /* empty */
   24                | expression_single
   25                | expr_comma_list ',' expression_single

   26 expression_single: OBJECTID ASSIGN expression_single
   27                  | expression_single '.' OBJECTID '(' expr_comma_list ')'
   28                  | expression_single '@' TYPEID '.' OBJECTID '(' expr_comma_list ')'
   29                  | OBJECTID '(' expr_comma_list ')'
   30                  | IF expression_single THEN expression_single FI
   31                  | IF expression_single THEN expression_single ELSE expression_single FI
   32                  | WHILE expression_single LOOP expression_single POOL
   33                  | '{' expression_list ';' '}'
   34                  | LET let_list
   35                  | CASE expression_single OF case_list ';' ESAC
   36                  | NEW TYPEID
   37                  | ISVOID expression_single
   38                  | expression_single '+' expression_single
   39                  | expression_single '-' expression_single
   40                  | expression_single '*' expression_single
   41                  | expression_single '/' expression_single
   42                  | '~' expression_single
   43                  | expression_single '<' expression_single
   44                  | expression_single LE expression_single
   45                  | expression_single '=' expression_single
   46                  | NOT expression_single
   47                  | '(' expression_single ')'
   48                  | OBJECTID
   49                  | INT_CONST
   50                  | STR_CONST
   51                  | BOOL_CONST
   52                  | error

   53 let_list: OBJECTID ':' TYPEID IN expression_single
   54         | OBJECTID ':' TYPEID ASSIGN expression_single IN expression_single
   55         | OBJECTID ':' TYPEID ',' let_list
   56         | OBJECTID ':' TYPEID ASSIGN expression_single ',' let_list

   57 case_list: case_single
   58          | case_list ';' case_single

   59 case_single: OBJECTID ':' TYPEID DARROW expression_single


Terminals, with rules where they appear

$end (0) 0
'(' (40) 10 27 28 29 47
')' (41) 10 27 28 29 47
'*' (42) 40
'+' (43) 38
',' (44) 17 25 55 56
'-' (45) 39
'.' (46) 27 28
'/' (47) 41
':' (58) 10 11 12 18 53 54 55 56 59
';' (59) 4 5 8 9 21 33 35 58
'<' (60) 43
'=' (61) 45
'@' (64) 28
'{' (123) 4 5 10 33
'}' (125) 4 5 10 33
'~' (126) 42
error (256) 6 13 19 22 52
CLASS (258) 4 5
ELSE (259) 31
FI (260) 30 31
IF (261) 30 31
IN (262) 53 54
INHERITS (263) 5
LET (264) 34
LOOP (265) 32
POOL (266) 32
THEN (267) 30 31
WHILE (268) 32
CASE (269) 35
ESAC (270) 35
OF (271) 35
DARROW (272) 59
NEW (273) 36
ISVOID (274) 37
STR_CONST (275) 50
INT_CONST (276) 49
BOOL_CONST (277) 51
TYPEID (278) 4 5 10 11 12 18 28 36 53 54 55 56 59
OBJECTID (279) 10 11 12 18 26 27 28 29 48 53 54 55 56 59
ASSIGN (280) 12 26 54 56
NOT (281) 46
LE (282) 44
ERROR (283)


Nonterminals, with rules where they appear

$accept (45)
    on left: 0
program (46)
    on left: 1, on right: 0
class_list (47)
    on left: 2 3, on right: 1 3
class (48)
    on left: 4 5 6, on right: 2 3
feature_list (49)
    on left: 7 8 9, on right: 4 5 9
feature_single (50)
    on left: 10 11 12 13, on right: 8 9
formal_list (51)
    on left: 14 15, on right: 10
formal_list2 (52)
    on left: 16 17, on right: 15 17
formal_single (53)
    on left: 18 19, on right: 16 17
expression_list (54)
    on left: 20 21 22, on right: 21 33
expr_comma_list (55)
    on left: 23 24 25, on right: 25 27 28 29
expression_single (56)
    on left: 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43
    44 45 46 47 48 49 50 51 52, on right: 10 12 20 21 24 25 26 27 28
    30 31 32 35 37 38 39 40 41 42 43 44 45 46 47 53 54 56 59
let_list (57)
    on left: 53 54 55 56, on right: 34 55 56
case_list (58)
    on left: 57 58, on right: 35 58
case_single (59)
    on left: 59, on right: 57 58


state 0

    0 $accept: . program $end

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    program     go to state 3
    class_list  go to state 4
    class       go to state 5


state 1

    6 class: error .

    $default  reduce using rule 6 (class)


state 2

    4 class: CLASS . TYPEID '{' feature_list '}' ';'
    5      | CLASS . TYPEID INHERITS TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 6


state 3

    0 $accept: program . $end

    $end  shift, and go to state 7


state 4

    1 program: class_list .
    3 class_list: class_list . class

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    $end  reduce using rule 1 (program)

    class  go to state 8


state 5

    2 class_list: class .

    $default  reduce using rule 2 (class_list)


state 6

    4 class: CLASS TYPEID . '{' feature_list '}' ';'
    5      | CLASS TYPEID . INHERITS TYPEID '{' feature_list '}' ';'

    INHERITS  shift, and go to state 9
    '{'       shift, and go to state 10


state 7

    0 $accept: program $end .

    $default  accept


state 8

    3 class_list: class_list class .

    $default  reduce using rule 3 (class_list)


state 9

    5 class: CLASS TYPEID INHERITS . TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 11


state 10

    4 class: CLASS TYPEID '{' . feature_list '}' ';'

    error     shift, and go to state 12
    OBJECTID  shift, and go to state 13

    error     [reduce using rule 7 (feature_list)]
    OBJECTID  [reduce using rule 7 (feature_list)]
    '}'       reduce using rule 7 (feature_list)

    feature_list    go to state 14
    feature_single  go to state 15


state 11

    5 class: CLASS TYPEID INHERITS TYPEID . '{' feature_list '}' ';'

    '{'  shift, and go to state 16


state 12

   13 feature_single: error .

    $default  reduce using rule 13 (feature_single)


state 13

   10 feature_single: OBJECTID . '(' formal_list ')' ':' TYPEID '{' expression_single '}'
   11               | OBJECTID . ':' TYPEID
   12               | OBJECTID . ':' TYPEID ASSIGN expression_single

    '('  shift, and go to state 17
    ':'  shift, and go to state 18


state 14

    4 class: CLASS TYPEID '{' feature_list . '}' ';'
    9 feature_list: feature_list . feature_single ';'

    error     shift, and go to state 12
    OBJECTID  shift, and go to state 13
    '}'       shift, and go to state 19

    feature_single  go to state 20


state 15

    8 feature_list: feature_single . ';'

    ';'  shift, and go to state 21


state 16

    5 class: CLASS TYPEID INHERITS TYPEID '{' . feature_list '}' ';'

    error     shift, and go to state 12
    OBJECTID  shift, and go to state 13

    error     [reduce using rule 7 (feature_list)]
    OBJECTID  [reduce using rule 7 (feature_list)]
    '}'       reduce using rule 7 (feature_list)

    feature_list    go to state 22
    feature_single  go to state 15


state 17

   10 feature_single: OBJECTID '(' . formal_list ')' ':' TYPEID '{' expression_single '}'

    error     shift, and go to state 23
    OBJECTID  shift, and go to state 24

    ')'  reduce using rule 14 (formal_list)

    formal_list    go to state 25
    formal_list2   go to state 26
    formal_single  go to state 27


state 18

   11 feature_single: OBJECTID ':' . TYPEID
   12               | OBJECTID ':' . TYPEID ASSIGN expression_single

    TYPEID  shift, and go to state 28


state 19

    4 class: CLASS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 29


state 20

    9 feature_list: feature_list feature_single . ';'

    ';'  shift, and go to state 30


state 21

    8 feature_list: feature_single ';' .

    $default  reduce using rule 8 (feature_list)


state 22

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list . '}' ';'
    9 feature_list: feature_list . feature_single ';'

    error     shift, and go to state 12
    OBJECTID  shift, and go to state 13
    '}'       shift, and go to state 31

    feature_single  go to state 20


state 23

   19 formal_single: error .

    $default  reduce using rule 19 (formal_single)


state 24

   18 formal_single: OBJECTID . ':' TYPEID

    ':'  shift, and go to state 32


state 25

   10 feature_single: OBJECTID '(' formal_list . ')' ':' TYPEID '{' expression_single '}'

    ')'  shift, and go to state 33


state 26

   15 formal_list: formal_list2 .
   17 formal_list2: formal_list2 . ',' formal_single

    ','  shift, and go to state 34

    $default  reduce using rule 15 (formal_list)


state 27

   16 formal_list2: formal_single .

    $default  reduce using rule 16 (formal_list2)


state 28

   11 feature_single: OBJECTID ':' TYPEID .
   12               | OBJECTID ':' TYPEID . ASSIGN expression_single

    ASSIGN  shift, and go to state 35

    $default  reduce using rule 11 (feature_single)


state 29

    4 class: CLASS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 4 (class)


state 30

    9 feature_list: feature_list feature_single ';' .

    $default  reduce using rule 9 (feature_list)


state 31

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 36


state 32

   18 formal_single: OBJECTID ':' . TYPEID

    TYPEID  shift, and go to state 37


state 33

   10 feature_single: OBJECTID '(' formal_list ')' . ':' TYPEID '{' expression_single '}'

    ':'  shift, and go to state 38


state 34

   17 formal_list2: formal_list2 ',' . formal_single

    error     shift, and go to state 23
    OBJECTID  shift, and go to state 24

    formal_single  go to state 39


state 35

   12 feature_single: OBJECTID ':' TYPEID ASSIGN . expression_single

    error       shift, and go to state 40
    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    STR_CONST   shift, and go to state 47
    INT_CONST   shift, and go to state 48
    BOOL_CONST  shift, and go to state 49
    OBJECTID    shift, and go to state 50
    NOT         shift, and go to state 51
    '~'         shift, and go to state 52
    '{'         shift, and go to state 53
    '('         shift, and go to state 54

    expression_single  go to state 55


state 36

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 5 (class)


state 37

   18 formal_single: OBJECTID ':' TYPEID .

    $default  reduce using rule 18 (formal_single)


state 38

   10 feature_single: OBJECTID '(' formal_list ')' ':' . TYPEID '{' expression_single '}'

    TYPEID  shift, and go to state 56


state 39

   17 formal_list2: formal_list2 ',' formal_single .

    $default  reduce using rule 17 (formal_list2)


state 40

   52 expression_single: error .

    $default  reduce using rule 52 (expression_single)


state 41

   30 expression_single: IF . expression_single THEN expression_single FI
   31                  | IF . expression_single THEN expression_single ELSE expression_single FI

    error       shift, and go to state 40
    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    STR_CONST   shift, and go to state 47
    INT_CONST   shift, and go to state 48
    BOOL_CONST  shift, and go to state 49
    OBJECTID    shift, and go to state 50
    NOT         shift, and go to state 51
    '~'         shift, and go to state 52
    '{'         shift, and go to state 53
    '('         shift, and go to state 54

    expression_single  go to state 57


state 42

   34 expression_single: LET . let_list

    OBJECTID  shift, and go to state 58

    let_list  go to state 59


state 43

   32 expression_single: WHILE . expression_single LOOP expression_single POOL

    error       shift, and go to state 40
    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    STR_CONST   shift, and go to state 47
    INT_CONST   shift, and go to state 48
    BOOL_CONST  shift, and go to state 49
    OBJECTID    shift, and go to state 50
    NOT         shift, and go to state 51
    '~'         shift, and go to state 52
    '{'         shift, and go to state 53
    '('         shift, and go to state 54

    expression_single  go to state 60


state 44

   35 expression_single: CASE . expression_single OF case_list ';' ESAC

    error       shift, and go to state 40
    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    STR_CONST   shift, and go to state 47
    INT_CONST   shift, and go to state 48
    BOOL_CONST  shift, and go to state 49
    OBJECTID    shift, and go to state 50
    NOT         shift, and go to state 51
    '~'         shift, and go to state 52
    '{'         shift, and go to state 53
    '('         shift, and go to state 54

    expression_single  go to state 61


state 45

   36 expression_single: NEW . TYPEID

    TYPEID  shift, and go to state 62


state 46

   37 expression_single: ISVOID . expression_single

    error       shift, and go to state 40
    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    STR_CONST   shift, and go to state 47
    INT_CONST   shift, and go to state 48
    BOOL_CONST  shift, and go to state 49
    OBJECTID    shift, and go to state 50
    NOT         shift, and go to state 51
    '~'         shift, and go to state 52
    '{'         shift, and go to state 53
    '('         shift, and go to state 54

    expression_single  go to state 63


state 47

   50 expression_single: STR_CONST .

    $default  reduce using rule 50 (expression_single)


state 48

   49 expression_single: INT_CONST .

    $default  reduce using rule 49 (expression_single)


state 49

   51 expression_single: BOOL_CONST .

    $default  reduce using rule 51 (expression_single)


state 50

   26 expression_single: OBJECTID . ASSIGN expression_single
   29                  | OBJECTID . '(' expr_comma_list ')'
   48                  | OBJECTID .

    ASSIGN  shift, and go to state 64
    '('     shift, and go to state 65

    $default  reduce using rule 48 (expression_single)


state 51

   46 expression_single: NOT . expression_single

    error       shift, and go to state 40
    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    STR_CONST   shift, and go to state 47
    INT_CONST   shift, and go to state 48
    BOOL_CONST  shift, and go to state 49
    OBJECTID    shift, and go to state 50
    NOT         shift, and go to state 51
    '~'         shift, and go to state 52
    '{'         shift, and go to state 53
    '('         shift, and go to state 54

    expression_single  go to state 66


state 52

   42 expression_single: '~' . expression_single

    error       shift, and go to state 40
    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    STR_CONST   shift, and go to state 47
    INT_CONST   shift, and go to state 48
    BOOL_CONST  shift, and go to state 49
    OBJECTID    shift, and go to state 50
    NOT         shift, and go to state 51
    '~'         shift, and go to state 52
    '{'         shift, and go to state 53
    '('         shift, and go to state 54

    expression_single  go to state 67


state 53

   33 expression_single: '{' . expression_list ';' '}'

    error       shift, and go to state 68
    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    STR_CONST   shift, and go to state 47
    INT_CONST   shift, and go to state 48
    BOOL_CONST  shift, and go to state 49
    OBJECTID    shift, and go to state 50
    NOT         shift, and go to state 51
    '~'         shift, and go to state 52
    '{'         shift, and go to state 53
    '('         shift, and go to state 54

    expression_list    go to state 69
    expression_single  go to state 70


state 54

   47 expression_single: '(' . expression_single ')'

    error       shift, and go to state 40
    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    STR_CONST   shift, and go to state 47
    INT_CONST   shift, and go to state 48
    BOOL_CONST  shift, and go to state 49
    OBJECTID    shift, and go to state 50
    NOT         shift, and go to state 51
    '~'         shift, and go to state 52
    '{'         shift, and go to state 53
    '('         shift, and go to state 54

    expression_single  go to state 71


state 55

   12 feature_single: OBJECTID ':' TYPEID ASSIGN expression_single .
   27 expression_single: expression_single . '.' OBJECTID '(' expr_comma_list ')'
   28                  | expression_single . '@' TYPEID '.' OBJECTID '(' expr_comma_list ')'
   38                  | expression_single . '+' expression_single
   39                  | expression_single . '-' expression_single
   40                  | expression_single . '*' expression_single
   41                  | expression_single . '/' expression_single
   43                  | expression_single . '<' expression_single
   44                  | expression_single . LE expression_single
   45                  | expression_single . '=' expression_single

    LE   shift, and go to state 72
    '<'  shift, and go to state 73
    '='  shift, and go to state 74
    '+'  shift, and go to state 75
    '-'  shift, and go to state 76
    '*'  shift, and go to state 77
    '/'  shift, and go to state 78
    '@'  shift, and go to state 79
    '.'  shift, and go to state 80

    $default  reduce using rule 12 (feature_single)


state 56

   10 feature_single: OBJECTID '(' formal_list ')' ':' TYPEID . '{' expression_single '}'

    '{'  shift, and go to state 81


state 57

   27 expression_single: expression_single . '.' OBJECTID '(' expr_comma_list ')'
   28                  | expression_single . '@' TYPEID '.' OBJECTID '(' expr_comma_list ')'
   30                  | IF expression_single . THEN expression_single FI
   31                  | IF expression_single . THEN expression_single ELSE expression_single FI
   38                  | expression_single . '+' expression_single
   39                  | expression_single . '-' expression_single
   40                  | expression_single . '*' expression_single
   41                  | expression_single . '/' expression_single
   43                  | expression_single . '<' expression_single
   44                  | expression_single . LE expression_single
   45                  | expression_single . '=' expression_single

    THEN  shift, and go to state 82
    LE    shift, and go to state 72
    '<'   shift, and go to state 73
    '='   shift, and go to state 74
    '+'   shift, and go to state 75
    '-'   shift, and go to state 76
    '*'   shift, and go to state 77
    '/'   shift, and go to state 78
    '@'   shift, and go to state 79
    '.'   shift, and go to state 80


state 58

   53 let_list: OBJECTID . ':' TYPEID IN expression_single
   54         | OBJECTID . ':' TYPEID ASSIGN expression_single IN expression_single
   55         | OBJECTID . ':' TYPEID ',' let_list
   56         | OBJECTID . ':' TYPEID ASSIGN expression_single ',' let_list

    ':'  shift, and go to state 83


state 59

   34 expression_single: LET let_list .

    $default  reduce using rule 34 (expression_single)


state 60

   27 expression_single: expression_single . '.' OBJECTID '(' expr_comma_list ')'
   28                  | expression_single . '@' TYPEID '.' OBJECTID '(' expr_comma_list ')'
   32                  | WHILE expression_single . LOOP expression_single POOL
   38                  | expression_single . '+' expression_single
   39                  | expression_single . '-' expression_single
   40                  | expression_single . '*' expression_single
   41                  | expression_single . '/' expression_single
   43                  | expression_single . '<' expression_single
   44                  | expression_single . LE expression_single
   45                  | expression_single . '=' expression_single

    LOOP  shift, and go to state 84
    LE    shift, and go to state 72
    '<'   shift, and go to state 73
    '='   shift, and go to state 74
    '+'   shift, and go to state 75
    '-'   shift, and go to state 76
    '*'   shift, and go to state 77
    '/'   shift, and go to state 78
    '@'   shift, and go to state 79
    '.'   shift, and go to state 80


state 61

   27 expression_single: expression_single . '.' OBJECTID '(' expr_comma_list ')'
   28                  | expression_single . '@' TYPEID '.' OBJECTID '(' expr_comma_list ')'
   35                  | CASE expression_single . OF case_list ';' ESAC
   38                  | expression_single . '+' expression_single
   39                  | expression_single . '-' expression_single
   40                  | expression_single . '*' expression_single
   41                  | expression_single . '/' expression_single
   43                  | expression_single . '<' expression_single
   44                  | expression_single . LE expression_single
   45                  | expression_single . '=' expression_single

    OF   shift, and go to state 85
    LE   shift, and go to state 72
    '<'  shift, and go to state 73
    '='  shift, and go to state 74
    '+'  shift, and go to state 75
    '-'  shift, and go to state 76
    '*'  shift, and go to state 77
    '/'  shift, and go to state 78
    '@'  shift, and go to state 79
    '.'  shift, and go to state 80


state 62

   36 expression_single: NEW TYPEID .

    $default  reduce using rule 36 (expression_single)


state 63

   27 expression_single: expression_single . '.' OBJECTID '(' expr_comma_list ')'
   28                  | expression_single . '@' TYPEID '.' OBJECTID '(' expr_comma_list ')'
   37                  | ISVOID expression_single .
   38                  | expression_single . '+' expression_single
   39                  | expression_single . '-' expression_single
   40                  | expression_single . '*' expression_single
   41                  | expression_single . '/' expression_single
   43                  | expression_single . '<' expression_single
   44                  | expression_single . LE expression_single
   45                  | expression_single . '=' expression_single

    '@'  shift, and go to state 79
    '.'  shift, and go to state 80

    $default  reduce using rule 37 (expression_single)


state 64

   26 expression_single: OBJECTID ASSIGN . expression_single

    error       shift, and go to state 40
    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    STR_CONST   shift, and go to state 47
    INT_CONST   shift, and go to state 48
    BOOL_CONST  shift, and go to state 49
    OBJECTID    shift, and go to state 50
    NOT         shift, and go to state 51
    '~'         shift, and go to state 52
    '{'         shift, and go to state 53
    '('         shift, and go to state 54

    expression_single  go to state 86


state 65

   29 expression_single: OBJECTID '(' . expr_comma_list ')'
